feature/настроить базовые события

--- a/src/components/wrapper/wrapper.pug
+++ b/src/components/wrapper/wrapper.pug
@@ -4,7 +4,5 @@ mixin wrapper(options = {})
   - const { title = '' } = options;
 
   section.wrapper
-    +icon()
-    +icon({ icon: 'pug' })
-    +icon({ icon: 'sass' })
-    +icon({ icon: 'javascript' })
+    .minesweeper
+      .minesweeper__wrapper
