--- a/src/components/wrapper/wrapper.pug
+++ b/src/components/wrapper/wrapper.pug
@@ -1,8 +1,8 @@
 include ../icon/icon
+include ../minesweeper/minesweeper
 
 mixin wrapper(options = {})
   - const { title = '' } = options;
 
   section.wrapper
-    .minesweeper
-      .minesweeper__wrapper
+    +minesweeper()
