feature/назначить стили ячеек

--- a/src/components/layout/layout.pug
+++ b/src/components/layout/layout.pug
@@ -5,7 +5,7 @@ block layoutParams
   - const layoutMod = '';
 
 block meta
-  - const title = 'Шаблон для быстрого старта';
+  - const title = 'Сапёр, тестовое задание';
 
 doctype html
 html(lang="ru")
