--- a/src/components/minesweeper/minesweeper.pug
+++ b/src/components/minesweeper/minesweeper.pug
@@ -6,7 +6,7 @@ mixin minesweeper()
         .minesweeper__digit
         .minesweeper__digit
       button.btn.minesweeper__btn(type="button")
-      .minesweeper__counter.minesweeper__counter_type_timer
+      .minesweeper__timer
         .minesweeper__digit
         .minesweeper__digit
         .minesweeper__digit
