feature/настроить методы для успешного завершения

--- a/src/components/minesweeper/minesweeper.pug
+++ b/src/components/minesweeper/minesweeper.pug
@@ -5,7 +5,7 @@ mixin minesweeper()
         .minesweeper__digit
         .minesweeper__digit
         .minesweeper__digit
-      button.btn.minesweeper__btn(type="button")
+      button.minesweeper__btn(type="button")
       .minesweeper__timer
         .minesweeper__digit
         .minesweeper__digit
